<resources>
    <string name="app_name">V2EX</string>

    <string name="account">账 号</string>
    <string name="password">密 码</string>
    <string name="captcha_code">验证码</string>
    <string name="login">登 录</string>
    <string name="logout">登 出</string>
    <string name="not_login">未登录</string>
    <string name="click_to_login">点击登录</string>
    <string name="login_success">登录成功</string>

    <string name="topic">话 题</string>
    <string name="checked">签 到</string>
    <string name="message">消 息</string>
    <string name="latest">最 新</string>
    <string name="hot">热 门</string>
    <string name="node">节 点</string>
    <string name="post">发 帖</string>
    <string name="theme">主 题</string>
    <string name="settings">设 置</string>

    <string name="following">关 注</string>
    <string name="search">搜 索</string>
    <string name="balance">余额</string>

    <string name="favor">收 藏</string>
    <string name="like">喜 欢</string>
    <string name="reply">回复</string>
    <string name="comment">评论</string>

    <string name="confirm">确 定</string>
    <string name="cancel">取 消</string>
    <string name="author">作 者</string>
    <string name="placeholder">XXX</string>
    <string name="zero">0</string>

    <string name="all_node">所有节点</string>

    <string name="block">屏蔽</string>
    <string name="up_vote">赞</string>
    <string name="down_vote">踩</string>
    <string name="poster">帖主</string>
    <string name="no_more">没有更多了 ~ </string>
    <string name="logging_in">登录中……</string>
    <string name="alert">提 示</string>
    <string name="are_you_sure_logout">你确定要登出?</string>
    <string name="username_format_error">用户名格式错误</string>
    <string name="password_format_error">密码格式错误</string>
    <string name="captcha_format_error">验证码格式错误</string>

    <string name="place_holder_floor"># %1$d</string>
    <string name="place_holder_reply">%1$d 回复</string>
    <string name="place_holder_topic_count">%1$d 话题</string>
    <string name="place_holder_created_on">创建于%1$s</string>

    <!--AppReferences-->
    <string name="need_storage_permission">需要存储权限</string>
    <string name="title_activity_settings2">Settings</string>

    <string name="general">通 用</string>
    <string name="auto_check">自动签到</string>
    <string name="summary_auto_check">每次开启app时自动签到</string>
    <string name="auto_night_theme">自动夜晚主题</string>
    <string name="auto_night_time">自动夜间主题时间</string>
    <string name="auto_night_time_default">21:00–7:00</string>
    <string name="summary_auto_night_theme">自动设置为夜晚在指定时间或在黑暗的环境</string>
    <string name="check_message_background">后台接受新消息</string>
    <string name="summary_check_background">十分钟检查一次是否有新消息,这将加大服务器压力,谨慎开启</string>
    <string name="date_format">时间格式</string>
    <string name="summary_date_format">yyyy/mm/dd hh:MM</string>
    <string name="clear_cache">清理缓存数据</string>

    <string name="advanced">高 级</string>
    <string name="home_tab">主页标签</string>
    <string name="summary_home_tab">自定义主页 Tab 以及顺序</string>
    <string name="topic_created_instead_touched">使用话题创建时间</string>
    <string name="summary_topic_created_instead_touched">显示话题的创建时间代替最后更新时间,仅部分类型话题可用</string>
    <string name="show_detailed_user_info">详细用户信息</string>
    <string name="summary_show_detailed_user_info">在用户详情页显示更多的用户信息</string>
    <string name="location">位 置</string>
    <string name="summary_location">通过位置设定语言及时区</string>
    <string name="node_name_instead_title">使用节点名称</string>
    <string name="summary_node_name_instead_title">显示节点的中文名代替英文名</string>
    <string name="use_official_api">使用官方API请求数据</string>
    <string name="summary_use_official_api">官方API有请求频率限制</string>
    <string name="reply_line_height">回复正文行高</string>
    <string name="summary_replay_line_height">话题回复的行高</string>

    <string name="about">关 于</string>
    <string name="reward">打 赏</string>
    <string name="summary_reward">多少不重要,这将鼓励我继续更新</string>
    <string name="contact">联系方式</string>
    <string name="author_and_contact">denua@foxmail.com</string>
    <string name="share">分 享</string>
    <string name="share_to">如果您觉得这个App不错, 将此App分享给朋友</string>
    <string name="version">版 本</string>
    <string name="version_no">Alpha</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
