<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingEnd="15dp"
    android:paddingStart="15dp">

    <ImageView
        android:id="@+id/iv_captcha"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <ProgressBar
        android:id="@+id/progress_captcha"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?attr_color_text_lightish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_check_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/captcha_code"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bt_login"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>